# kws-pi-mlops

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  config.yaml  main.cpp
.dvc/: config
.github/workflows/: mlops.yml
data/: raw_data.dvc
scripts/: build_bin.py  deploy_board.py  ingest_data.py  save_version.py  test_model.py  train_model.py
